internal/cli/testdata/crash/syntax-error/invalid.ts
function = invalid syntax here
const x = { unclosed brace
export class {